// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter Snapshot 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_brand css-1wpxzyc-QxCounter-root"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color brand 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_brand css-1wpxzyc-QxCounter-root"
    data-testid="testStyleParams-color-brand"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color danger 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_danger css-7taqe1-QxCounter-root"
    data-testid="testStyleParams-color-danger"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color info 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_info css-kcan2j-QxCounter-root"
    data-testid="testStyleParams-color-info"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color secondary 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_secondary css-1kgegnx-QxCounter-root"
    data-testid="testStyleParams-color-secondary"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color success 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_success css-170hlbl-QxCounter-root"
    data-testid="testStyleParams-color-success"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color text 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_text css-4mbru-QxCounter-root"
    data-testid="testStyleParams-color-text"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color warning 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_warning css-c883of-QxCounter-root"
    data-testid="testStyleParams-color-warning"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter size large 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_brand css-1wpxzyc-QxCounter-root"
    data-testid="testStyleParams-size-large"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter size medium 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_medium QxCounter_color_brand css-85w8fq-QxCounter-root"
    data-testid="testStyleParams-size-medium"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter size small 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_small QxCounter_color_brand css-fqvcu3-QxCounter-root"
    data-testid="testStyleParams-size-small"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter type filled 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_brand css-1wpxzyc-QxCounter-root"
    data-testid="testStyleParams-type-filled"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter type ghosted 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_ghosted QxCounter_size_large QxCounter_color_brand css-1xhedyb-QxCounter-root"
    data-testid="testStyleParams-type-ghosted"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter type white 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_white QxCounter_size_large QxCounter_color_brand css-nr005x-QxCounter-root"
    data-testid="testStyleParams-type-white"
  >
    99
  </span>
</DocumentFragment>
`;
